Booking calendar component rendered on website, Icons added into the collapsable vertical menu, table styling changed to have fixed size and shadow border, toggling between past and upcoming bookings done, last login indicator moved from header to near logout icon

--- a/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
+++ b/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
@@ -59,9 +59,7 @@
         padding: 0 1rem;
         width: 100%;
       }
-      .navbar-header {
-        display: none;
-      }
+      
     }
   }
   .header-navbar {
