--- a/src/components/dharmshalaBooking/Calendar.css
+++ b/src/components/dharmshalaBooking/Calendar.css
@@ -2,7 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
-  width: 110%;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   font-family: "Open Sans", sans-serif;
@@ -13,12 +13,15 @@ html {
   flex-direction: column;
   align-items: flex-start;
   padding: 20px;
-  width: 101%;
-  height: 103vh;
+  width: 100%;
+  height: 75vh;
   box-sizing: border-box;
   background-color: #fff7e8;
-  margin-left: -38px;
-  margin-top: -20px;
+  /* margin-left: -38px;
+  margin-top: -20px; */
+  margin-left: 0;
+  margin-top: 0;
+  
 }
 
 .calendar-filters {
@@ -47,7 +50,8 @@ html {
   display: flex;
   overflow-x: auto;
   width: 100%;
-  height: calc(100% - 40px);
+  /* height: calc(100% - 40px); */
+  height: 100%;
   flex-direction: column;
 }
 .last-past-day-cell .overlay {
@@ -399,6 +403,7 @@ html {
   animation-name: popIn;
   animation-duration: 0.3s;
   animation-timing-function: ease-out;
+
 }
 
 .modal.fade .modal-dialog.hide-modal {
@@ -504,7 +509,7 @@ html {
     margin-left: 41px;
   }
   .calendar {
-    /* width: 100%; */
+    width: 100%;
   }
   .calendar .calendar-header .day-cells-container .day-cell {
     height: 100%;
@@ -632,7 +637,7 @@ html {
   html {
     margin: 0;
     padding: 0;
-    width: 110%;
+    width: 100%;
     height: 100%;
     overflow: hidden;
     font-family: "Open Sans", sans-serif;
