--- a/src/components/dharmshalaBooking/bookingModal.css
+++ b/src/components/dharmshalaBooking/bookingModal.css
@@ -28,7 +28,7 @@
   background: #fff;
   -webkit-box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.3);
-  border-radius:10px
+  border-radius:10px;
 }
 
 .booking-form > .booking-bg {
